client app additions and subscription refactor
