# template_onion_with_mqtt/server/Application/Interfaces/IWebsocketSubscriptionService.cs
@@ -1,0 +1,7 @@
+namespace Application.Interfaces;
+
+public interface IWebsocketSubscriptionService
+{
+    public Task SubscribeToTopic(string clientId, List<string> topicIds);
+    public Task UnsubscribeFromTopic(string clientId, List<string> topicIds);
+}
