# template_onion_with_mqtt/server/Application/Models/Dtos/RestDtos/ChangeSubscriptionDto.cs
@@ -1,0 +1,7 @@
+namespace Application.Models.Dtos;
+
+public class ChangeSubscriptionDto
+{
+    public string ClientId { get; set; }
+    public List<string> TopicIds { get; set; }
+}
