# template_onion_with_mqtt/server/Application/Models/Dtos/RestDtos/SubscribeToTopicDto.cs
@@ -1,7 +1,0 @@
-namespace Application.Models.Dtos;
-
-public class SubscribeToTopicDto
-{
-    public string ClientId { get; set; }
-    public string Topic { get; set; }
-}
